# 2024-P1-lorenzopolicar

./: README.md  endpoints.http  pyproject.toml
.github/classroom/: autograding.json
todo/: __init__.py
todo/views/: routes.py
